kubernetes/50-todo-backend/eks/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: todo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  defaultBackend:
    service:
      name: http-capability-service
      port:
        number: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: http-capability-service
  namespace: todo
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: http-capability
  ports:
    - protocol: TCP
      name: http
      port: 8082
      targetPort: 8082
